
* SOLR-14983: Fix response returning original score instead of reranked score due to query and filter combining.
  (Krishan Goyal, Jason Baik, Christine Poerschke)

* SOLR-14993: Unable to download zookeeper files of 1byte in size (Erick Erickson, Allen Sooredoo)

Other Changes
---------------------

* SOLR-14954: Heavily edit reindexing.adoc (Sameul García Martínez and Erick Erickson)

* SOLR-14995: Update Jetty to 9.4.34 (Mike Drob)

==================  8.7.0 ==================

Consult the lucene/CHANGES.txt file for additional, low level, changes in this release.

New Features
---------------------

* SOLR-14151 Make schema components load from packages (noble)

* SOLR-14681: Introduce ability to delete .jar stored in the Package Store. (MarcusSorealheis , Mike Drob)

* SOLR-14604: Add the ability to uninstall a package from with the Package CLI. (MarcusSorealheis)

* SOLR-14582: Expose IWC.setMaxCommitMergeWaitMillis in Solr's index config. This is an expert config option that can be
  set when using a custom MergePolicy (doesn't have any effect on the default MP) (Tomás Fernández Löbbe)

* SOLR-13751: Add BooleanSimilarityFactory class. (Andy Webb via Christine Poerschke)

* SOLR-14875: Make SolrEventListeners load from packages (noble)

* SOLR-10391: ConfigSet handler now supports overrides on existing configsets. (Tomás Fernández Löbbe)

* SOLR-11167: Avoid $SOLR_STOP_WAIT use during 'bin/solr start' if $SOLR_START_WAIT is supplied.
  (Omar Abdelnabi, Christine Poerschke)

* SOLR-14907: Support single file upload/overwrite in configSet API. (Houston Putman)

* SOLR-14914: Add option to disable metrics collection. (ab)

* SOLR-14588: Introduce Circuit Breaker Infrastructure and a JVM heap usage memory tracking circuit breaker implementation (Atri Sharma)

* SOLR-14615: CPU Utilization Based Circuit Breaker (Atri Sharma)

Improvements
---------------------
